# llarm

./: .clang-format  .clang-tidy  .clang_tidy  .gitignore  CMakeLists.txt  CMakeLists_tmp..cmake  LICENSE  README.md  todo.md
charm-asm/: CMakeLists.txt  README.md  charm-asm.hpp
charm-asm/src/: instruction_id.hpp  instruction_table.hpp  main.cpp  utility.cpp  utility.hpp
charm-asm/src/disassemble/: arm.cpp  disassemble.cpp  disassemble.hpp  settings.hpp  thumb.cpp
charm-asm/src/disassemble/generators/: generators.hpp  util.cpp  util.hpp
charm-asm/src/disassemble/generators/arm/: branching.cpp  coprocessor.cpp  (+9 more)
charm-asm/src/identifiers/: arm.cpp  identifiers.hpp  jazelle.cpp  thumb.cpp
charm-asm/src/opcodes/: arm.cpp  opcodes.hpp  thumb.cpp
charm-emu/: CMakeLists.txt  README.md  tmpCMakeLists.txt
charm-emu/src/: constants.hpp  id.hpp  main.cpp  manager.hpp  settings.hpp  types_extra.hpp  utility.hpp
charm-emu/src/cpu/: cpu.cpp  exception.cpp  instruction_set.cpp  instruction_set.hpp  system.hpp
charm-emu/src/cpu/coprocessor/: coprocessor.hpp  cp10.hpp  cp11.hpp  cp15.hpp
charm-emu/src/cpu/core/: core.cpp  core.hpp  registers.cpp  vfp.hpp
charm-emu/src/cpu/instructions/: instructions.hpp  operation.hpp
charm-emu/src/cpu/memory/: alignment.hpp  cache.hpp  fcse.hpp  memory.hpp  mmu.hpp  mpu.hpp  ram.hpp  structure.hpp
charm-emu/tests/: Makefile  README.md  linker.ld
charm-emu/tests/fibonacci/: Makefile  fib.asm  fib.c
llarm-asm/: CMakeLists.txt  README.md  charm-asm.hpp  llarm-asm-config.cmake.in  llarm-asm.hpp
llarm-asm/docs/: documentation.md
llarm-asm/llarm/: llarm-asm.hpp
llarm-asm/src/: encoding_utils.cpp  encoding_utils.hpp  instruction_id.hpp  instruction_table.hpp  main.cpp  settings.hpp  shifter_id.hpp
llarm-asm/src/assemble/: arguments.cpp  arguments.hpp  assemble.cpp  assemble.hpp
llarm-asm/src/assemble/arm/: generators.cpp  generators.hpp
llarm-asm/src/assemble/generators/: generators.cpp  generators.hpp  note.txt
llarm-asm/src/assemble/thumb/: generators.cpp  generators.hpp
llarm-asm/src/disassemble/: disassemble.cpp  disassemble.hpp
llarm-asm/src/disassemble/generators/: generators.hpp  util.cpp  util.hpp
llarm-asm/src/generators/: generators.hpp
llarm-asm/src/id/: cond_id.hpp  instruction_id.hpp  shifter_id.hpp
llarm-asm/src/identifiers/: arm.cpp  bin_arm.cpp  bin_arm.hpp  bin_shifters.cpp  bin_shifters.hpp  bin_thumb.cpp  bin_thumb.hpp  identifiers.cpp  identifiers.hpp  interpreter.cpp  interpreter.hpp  jazelle.cpp  shifters.hpp  string_arm.cpp  string_arm.hpp  string_shifters.cpp  string_shifters.hpp  string_thumb.cpp  string_thumb.hpp  thumb.cpp  todo_instructions  u16_thumb.cpp  u16_thumb.hpp  u32_arm.cpp  u32_arm.hpp  u32_shifters.cpp  u32_shifters.hpp
llarm-asm/src/interpreter/: IR.cpp  IR.hpp  IR_struct.hpp  interpreter.cpp  interpreter.hpp  lexer.cpp  lexer.hpp  matchers.cpp  matchers.hpp  mnemonic.cpp  mnemonic.hpp  mnemonic_arm.cpp  mnemonic_arm.hpp  mnemonic_thumb.cpp  mnemonic_thumb.hpp  new_interpreter.cpp  new_interpreter.hpp  old_interpreter.cpp  old_interpreter.hpp  operand_struct.hpp  operands.cpp  operands.hpp  tokens.cpp  tokens.hpp
llarm-asm/src/opcodes/: arm.cpp  opcodes.hpp  thumb.cpp
llarm-asm/src/validation/: bin_arm.cpp  bin_arm.hpp  bin_thumb.cpp  bin_thumb.hpp  note.txt  string_arm.cpp  string_arm.hpp  string_thumb.cpp  string_thumb.hpp  u16_thumb.cpp  u16_thumb.hpp  u32_arm.cpp  u32_arm.hpp
llarm-asm/src/validifiers/: string_arm.cpp  string_arm.hpp  string_thumb.cpp  u16_thumb.cpp  u16_thumb.hpp  u32_arm.cpp  validifier.hpp
llarm-asm/tests/: CMakeLists.txt  arm_disassembly.cpp
llarm-asm/tests/src/: arm_benchmark.cpp  arm_disassembly.cpp  capstone.cpp  capstone_disassembler.hpp  constants.hpp  disassembler.hpp  fuzzer.hpp  thumb_disassembly.cpp
llarm-asm/tooling/: a.out  data_address_imm.c  out.txt
llarm-cpu/: CMakeLists.txt  Makefile  README.md  llarm-cpu-config.cmake.in  llarm-cpu.h  main.cpp
llarm-cpu/docs/: c_documentation.md  cpp_documentation.md
llarm-cpu/llarm/: llarm-cpu.h  llarm-cpu.hpp
llarm-cpu/src/: main.cpp
llarm-cpu/tests/: run_tests.sh  startup.S  test_arm.elf  test_main.cpp
llarm-emu/: CMakeLists.txt  README.md  llarm-emu-config.cmake.in  llarm-emu.hpp
llarm-emu/llarm/: llarm-emu.hpp
llarm-emu/src/: constants.hpp  id.hpp  logs.hpp  main.cpp  sanitize.hpp  settings.cpp  settings.hpp  types_extra.hpp  utility.cpp  utility.hpp
llarm-emu/src/cpu/: cpu.cpp  cpu.hpp  exception.cpp  exception.hpp  globals.hpp  instruction_set.cpp  instruction_set.hpp  system.hpp
llarm-emu/src/cpu/coprocessor/: coprocessor.cpp  coprocessor.hpp  cp15.cpp  cp15.hpp
llarm-emu/src/cpu/core/: core.cpp  core.hpp  exception.cpp  exception.hpp  globals.hpp  registers.cpp  registers.hpp  vfp.hpp
llarm-emu/src/cpu/instructions/: checklist.md  instructions.hpp  operation.cpp  operation.hpp
llarm-emu/src/cpu/memory/: 26_bit_arch.cpp  26_bit_arch.hpp  alignment.cpp  alignment.hpp  cache.cpp  cache.hpp  fcse.cpp  fcse.hpp  memory.cpp  memory.hpp  mmu.cpp  mmu.hpp  mpu.cpp  mpu.hpp  ram.cpp  ram.hpp  structure.hpp  structures.hpp  tlb.cpp  tlb.hpp
llarm-emu/src/cpu/vfp/: addressing_modes.cpp  addressing_modes.hpp  exception.cpp  exception.hpp  registers.cpp  registers.hpp  utils.cpp  utils.hpp  vfp.hpp
llarm-emu/src/peripherals/uart/: uart.cpp  uart.hpp
llarm-emu/src/ram/: ram.cpp  ram.hpp
llarm-emu/src/vic/: vic.cpp  vic.hpp
llarm-emu/tests/csmith/: generate.sh
llarm-emu/tests/fibonacci/: fib.asm
llarm-emu/tests/general/fibonacci/: a.out  fib.asm  fib.opt.yaml
llarm-emu/tests/general/gcd/: Makefile  gcd.asm  gcd.c
llarm-emu/tests/llvm/: generate.sh
llarm-emu/tests/peripherals/uart/: Makefile  uart_test.s
llarm-emu/tests/specialised/movement/: Makefile
shared/: CMakeLists.txt  out.hpp  random.cpp  string_view.hpp  types.hpp  util.cpp  util.hpp
shared/include/llarm/shared/: metadata.hpp  out.hpp  random.hpp  types.hpp  util.hpp  wagner_fischer.hpp
shared/src/: random.cpp  util.cpp  wagner_fischer.cpp
shared/tools/: metadata.hpp  wagner_fischer.hpp
(+293 files in other folders)
